k8s/configmap.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: proxy-config
data: 
  envoy.yaml: |
    admin:
    access_log_path: "/dev/null"
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 9901
    layered_runtime:
      layers:
        - name: static_layer_0
          static_layer:
            envoy:
              resource_limits:
                listener:
                  example_listener_name:
                    connection_limit: 10000
            overload:
              global_downstream_max_connections: 50000

    static_resources:
      listeners:
        - address:
            socket_address:
              address: 0.0.0.0
              port_value: 8000
          filter_chains:
            - filters:
                - name: envoy.filters.network.http_connection_manager
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                    codec_type: AUTO
                    stat_prefix: ingress_http
                    access_log:
                      - name: envoy.access_loggers.stdout
                        typed_config:
                          "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
                    route_config:
                      name: local_route
                      virtual_hosts:
                        - name: backend
                          domains: 
                          - "*"
                          routes:
                          - match:
                              prefix: "/user"
                            route:
                              cluster: user-service
                          - match:
                              prefix: "/product"
                            route:
                              cluster: product-service
                          cors:
                            allow_origin_string_match:
                            - prefix: "*"
                            allow_methods: GET, PUT, DELETE, POST, OPTIONS
                            allow_headers: access-control-expose-headers,access-control-allow-origin,authorization,keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout
                            max_age: "1728000"
                            expose_headers: access-control-expose-headers,access-control-allow-origin,authorization,grpc-status,grpc-message
                    http_filters:
                      - name: envoy.ext_authz
                        typed_config:
                          "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
                          transport_api_version: V3
                          with_request_body:
                            max_request_bytes: 8192
                            allow_partial_message: true
                          failure_mode_allow: false
                          grpc_service:
                            google_grpc:
                              target_uri: 127.0.0.1:9002
                              stat_prefix: ext_authz
                            timeout: 0.250s
                      - name: envoy.filters.http.cors
                      - name: envoy.filters.http.router

      clusters:
        - name: user-service
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          load_assignment:
            cluster_name: user-service
            endpoints:
              - lb_endpoints:
                  - endpoint:
                      address:
                        socket_address:
                          address: user-service
                          port_value: 8081

        - name: product-service
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          load_assignment:
            cluster_name: product-service
            endpoints:
              - lb_endpoints:
                  - endpoint:
                      address:
                        socket_address:
                          address: product-service
                          port_value: 8082
