k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-app
spec:
  type: LoadBalancer
  selector:
    app: example-app
  ports:
    - protocol: TCP
      port: 9999
      targetPort: 9376
